# GeoUpdate-Monitor

./: .gitignore  IMPLEMENTATION.md  README.md  pyproject.toml
earth_imagery_watcher/: __init__.py  config.py  database.py  date_parser.py  earth_automation.py  earth_controller.py  idle.py  kml.py  main.py  notifications.py  ocr_reader.py  regions.py  sampling.py  scheduler.py  screenshot_capture.py
earth_imagery_watcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: delhi_region.geojson  sample_region.geojson  watcher-config.json
tests/: test_config.py  test_database.py  test_date_parser.py  test_earth_automation.py  test_earth_controller.py  test_idle.py  test_kml.py  test_main.py  test_notifications.py  test_ocr_reader.py  test_sampling.py  test_scheduler.py  test_screenshot_capture.py
