[project]
name = "earth-imagery-watcher"
version = "0.1.0"
description = "Date-only Google Earth Pro imagery update monitor for GeoJSON regions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ocr = [
    "paddleocr>=2.7",
]
screenshot = [
    "Pillow>=10.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
]
automation = [
    "pyautogui>=0.9.54",
]
notifications = [
    "requests>=2.28",
]
all = [
    "paddleocr>=2.7",
    "Pillow>=10.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "requests>=2.28",
]

[project.scripts]
earth-imagery-watcher = "earth_imagery_watcher.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
